src/hippo_core/miniaudio/src/bindings.rs

extern "C" {
    pub fn ma_hishelf2_process_pcm_frames(
        pFilter: *mut ma_hishelf2,
        pFramesOut: *mut ::std::os::raw::c_void,
        pFramesIn: *const ::std::os::raw::c_void,
        frameCount: ma_uint64,
    ) -> ma_result;
}
extern "C" {
    pub fn ma_hishelf2_get_latency(pFilter: *mut ma_hishelf2) -> ma_uint32;
}
#[doc = "Resampling"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ma_linear_resampler_config {
    pub format: ma_format,
    pub channels: ma_uint32,
    pub sampleRateIn: ma_uint32,
    pub sampleRateOut: ma_uint32,
    pub lpfOrder: ma_uint32,
    pub lpfNyquistFactor: f64,
}
extern "C" {
    pub fn ma_linear_resampler_config_init(
        format: ma_format,
        channels: ma_uint32,
        sampleRateIn: ma_uint32,
        sampleRateOut: ma_uint32,
    ) -> ma_linear_resampler_config;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct ma_linear_resampler {
    pub config: ma_linear_resampler_config,
    pub inAdvanceInt: ma_uint32,
    pub inAdvanceFrac: ma_uint32,
    pub inTimeInt: ma_uint32,
    pub inTimeFrac: ma_uint32,
    pub x0: ma_linear_resampler__bindgen_ty_1,
    pub x1: ma_linear_resampler__bindgen_ty_2,
    pub lpf: ma_lpf,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union ma_linear_resampler__bindgen_ty_1 {
    pub f32: [f32; 32usize],
    pub s16: [ma_int16; 32usize],
    _bindgen_union_align: [u32; 32usize],
}
impl ::std::fmt::Debug for ma_linear_resampler__bindgen_ty_1 {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        write!(f, "ma_linear_resampler__bindgen_ty_1 {{ union }}")
    }
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union ma_linear_resampler__bindgen_ty_2 {
    pub f32: [f32; 32usize],
    pub s16: [ma_int16; 32usize],
    _bindgen_union_align: [u32; 32usize],
}
impl ::std::fmt::Debug for ma_linear_resampler__bindgen_ty_2 {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        write!(f, "ma_linear_resampler__bindgen_ty_2 {{ union }}")
    }
}
impl ::std::fmt::Debug for ma_linear_resampler {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        write ! ( f , "ma_linear_resampler {{ config: {:?}, inAdvanceInt: {:?}, inAdvanceFrac: {:?}, inTimeInt: {:?}, inTimeFrac: {:?}, x0: {:?}, x1: {:?}, lpf: {:?} }}" , self . config , self . inAdvanceInt , self . inAdvanceFrac , self . inTimeInt , self . inTimeFrac , self . x0 , self . x1 , self . lpf )
    }
}
extern "C" {
    pub fn ma_linear_resampler_init(
        pConfig: *const ma_linear_resampler_config,
        pResampler: *mut ma_linear_resampler,
    ) -> ma_result;
}
extern "C" {
    pub fn ma_linear_resampler_uninit(pResampler: *mut ma_linear_resampler);
}
extern "C" {
    pub fn ma_linear_resampler_process_pcm_frames(
        pResampler: *mut ma_linear_resampler,
        pFramesIn: *const ::std::os::raw::c_void,
        pFrameCountIn: *mut ma_uint64,
        pFramesOut: *mut ::std::os::raw::c_void,
        pFrameCountOut: *mut ma_uint64,
    ) -> ma_result;
}
extern "C" {
    pub fn ma_linear_resampler_set_rate(
        pResampler: *mut ma_linear_resampler,
        sampleRateIn: ma_uint32,
        sampleRateOut: ma_uint32,
    ) -> ma_result;
}
extern "C" {
    pub fn ma_linear_resampler_set_rate_ratio(
        pResampler: *mut ma_linear_resampler,
        ratioInOut: f32,
    ) -> ma_result;
}
extern "C" {
    pub fn ma_linear_resampler_get_required_input_frame_count(
        pResampler: *mut ma_linear_resampler,
        outputFrameCount: ma_uint64,
    ) -> ma_uint64;
}
extern "C" {
    pub fn ma_linear_resampler_get_expected_output_frame_count(
        pResampler: *mut ma_linear_resampler,
        inputFrameCount: ma_uint64,
    ) -> ma_uint64;
}
extern "C" {
    pub fn ma_linear_resampler_get_input_latency(pResampler: *mut ma_linear_resampler)
        -> ma_uint64;
}
extern "C" {
    pub fn ma_linear_resampler_get_output_latency(
        pResampler: *mut ma_linear_resampler,
    ) -> ma_uint64;
}
pub const ma_resample_algorithm_linear: ma_resample_algorithm = 0;
pub const ma_resample_algorithm_speex: ma_resample_algorithm = 1;
pub type ma_resample_algorithm = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ma_resampler_config {
    pub format: ma_format,
    pub channels: ma_uint32,
    pub sampleRateIn: ma_uint32,
    pub sampleRateOut: ma_uint32,
    pub algorithm: ma_resample_algorithm,
    pub linear: ma_resampler_config__bindgen_ty_1,
    pub speex: ma_resampler_config__bindgen_ty_2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ma_resampler_config__bindgen_ty_1 {
    pub lpfOrder: ma_uint32,
    pub lpfNyquistFactor: f64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ma_resampler_config__bindgen_ty_2 {
    pub quality: ::std::os::raw::c_int,
}
extern "C" {
    pub fn ma_resampler_config_init(
        format: ma_format,
        channels: ma_uint32,
        sampleRateIn: ma_uint32,
        sampleRateOut: ma_uint32,
        algorithm: ma_resample_algorithm,
    ) -> ma_resampler_config;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct ma_resampler {
    pub config: ma_resampler_config,
    pub state: ma_resampler__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union ma_resampler__bindgen_ty_1 {
    pub linear: ma_linear_resampler,
    pub speex: ma_resampler__bindgen_ty_1__bindgen_ty_1,
    _bindgen_union_align: [u64; 200usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ma_resampler__bindgen_ty_1__bindgen_ty_1 {
    pub pSpeexResamplerState: *mut ::std::os::raw::c_void,
}
impl ::std::fmt::Debug for ma_resampler__bindgen_ty_1 {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        write!(f, "ma_resampler__bindgen_ty_1 {{ union }}")
    }
}
impl ::std::fmt::Debug for ma_resampler {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        write!(
            f,
            "ma_resampler {{ config: {:?}, state: {:?} }}",
            self.config, self.state
        )
    }
}
extern "C" {
    pub fn ma_resampler_init(
        pConfig: *const ma_resampler_config,
        pResampler: *mut ma_resampler,
    ) -> ma_result;
}
extern "C" {
    pub fn ma_resampler_uninit(pResampler: *mut ma_resampler);
}
extern "C" {
    pub fn ma_resampler_process_pcm_frames(
        pResampler: *mut ma_resampler,
        pFramesIn: *const ::std::os::raw::c_void,
        pFrameCountIn: *mut ma_uint64,
        pFramesOut: *mut ::std::os::raw::c_void,
        pFrameCountOut: *mut ma_uint64,
    ) -> ma_result;
}
extern "C" {
    pub fn ma_resampler_set_rate(
        pResampler: *mut ma_resampler,
        sampleRateIn: ma_uint32,
        sampleRateOut: ma_uint32,
    ) -> ma_result;
}
extern "C" {
    pub fn ma_resampler_set_rate_ratio(pResampler: *mut ma_resampler, ratio: f32) -> ma_result;
}
extern "C" {
    pub fn ma_resampler_get_required_input_frame_count(
        pResampler: *mut ma_resampler,
        outputFrameCount: ma_uint64,
    ) -> ma_uint64;
}
extern "C" {
    pub fn ma_resampler_get_expected_output_frame_count(
        pResampler: *mut ma_resampler,
        inputFrameCount: ma_uint64,
    ) -> ma_uint64;
}
extern "C" {
    pub fn ma_resampler_get_input_latency(pResampler: *mut ma_resampler) -> ma_uint64;
}
extern "C" {
    pub fn ma_resampler_get_output_latency(pResampler: *mut ma_resampler) -> ma_uint64;
}
#[doc = "Channel Conversion"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ma_channel_converter_config {
    pub format: ma_format,
    pub channelsIn: ma_uint32,
    pub channelsOut: ma_uint32,
    pub channelMapIn: [ma_channel; 32usize],
    pub channelMapOut: [ma_channel; 32usize],
    pub mixingMode: ma_channel_mix_mode,
    pub weights: [[f32; 32usize]; 32usize],
}
extern "C" {
    pub fn ma_channel_converter_config_init(
        format: ma_format,
        channelsIn: ma_uint32,
        pChannelMapIn: *const ma_channel,
        channelsOut: ma_uint32,
        pChannelMapOut: *const ma_channel,
        mixingMode: ma_channel_mix_mode,
    ) -> ma_channel_converter_config;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct ma_channel_converter {
    pub format: ma_format,
    pub channelsIn: ma_uint32,
    pub channelsOut: ma_uint32,
    pub channelMapIn: [ma_channel; 32usize],
    pub channelMapOut: [ma_channel; 32usize],
    pub mixingMode: ma_channel_mix_mode,
    pub weights: ma_channel_converter__bindgen_ty_1,
    pub isPassthrough: ma_bool8,
    pub isSimpleShuffle: ma_bool8,
    pub isSimpleMonoExpansion: ma_bool8,
    pub isStereoToMono: ma_bool8,
    pub shuffleTable: [ma_uint8; 32usize],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union ma_channel_converter__bindgen_ty_1 {
    pub f32: [[f32; 32usize]; 32usize],
    pub s16: [[ma_int32; 32usize]; 32usize],
    _bindgen_union_align: [u32; 1024usize],
}
impl ::std::fmt::Debug for ma_channel_converter__bindgen_ty_1 {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        write!(f, "ma_channel_converter__bindgen_ty_1 {{ union }}")
    }
}
impl ::std::fmt::Debug for ma_channel_converter {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        write ! ( f , "ma_channel_converter {{ format: {:?}, channelsIn: {:?}, channelsOut: {:?}, channelMapIn: [{}], channelMapOut: [{}], mixingMode: {:?}, weights: {:?}, isPassthrough: {:?}, isSimpleShuffle: {:?}, isSimpleMonoExpansion: {:?}, isStereoToMono: {:?}, shuffleTable: [{}] }}" , self . format , self . channelsIn , self . channelsOut , self . channelMapIn . iter ( ) . enumerate ( ) . map ( | ( i , v ) | format ! ( "{}{:?}" , if i > 0 { ", " } else { "" } , v ) ) . collect :: < String > ( ) , self . channelMapOut . iter ( ) . enumerate ( ) . map ( | ( i , v ) | format ! ( "{}{:?}" , if i > 0 { ", " } else { "" } , v ) ) . collect :: < String > ( ) , self . mixingMode , self . weights , self . isPassthrough , self . isSimpleShuffle , self . isSimpleMonoExpansion , self . isStereoToMono , self . shuffleTable . iter ( ) . enumerate ( ) . map ( | ( i , v ) | format ! ( "{}{:?}" , if i > 0 { ", " } else { "" } , v ) ) . collect :: < String > ( ) )
    }
}
extern "C" {
    pub fn ma_channel_converter_init(
        pConfig: *const ma_channel_converter_config,
        pConverter: *mut ma_channel_converter,
    ) -> ma_result;
}
extern "C" {
    pub fn ma_channel_converter_uninit(pConverter: *mut ma_channel_converter);
}
extern "C" {
    pub fn ma_channel_converter_process_pcm_frames(
        pConverter: *mut ma_channel_converter,
        pFramesOut: *mut ::std::os::raw::c_void,
        pFramesIn: *const ::std::os::raw::c_void,
        frameCount: ma_uint64,
    ) -> ma_result;
}
#[doc = "Data Conversion"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ma_data_converter_config {
    pub formatIn: ma_format,
    pub formatOut: ma_format,
    pub channelsIn: ma_uint32,
    pub channelsOut: ma_uint32,
    pub sampleRateIn: ma_uint32,
    pub sampleRateOut: ma_uint32,
    pub channelMapIn: [ma_channel; 32usize],
    pub channelMapOut: [ma_channel; 32usize],
    pub ditherMode: ma_dither_mode,
    pub channelMixMode: ma_channel_mix_mode,
    pub channelWeights: [[f32; 32usize]; 32usize],
    pub resampling: ma_data_converter_config__bindgen_ty_1,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ma_data_converter_config__bindgen_ty_1 {
    pub algorithm: ma_resample_algorithm,
    pub allowDynamicSampleRate: ma_bool32,
    pub linear: ma_data_converter_config__bindgen_ty_1__bindgen_ty_1,
    pub speex: ma_data_converter_config__bindgen_ty_1__bindgen_ty_2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ma_data_converter_config__bindgen_ty_1__bindgen_ty_1 {
    pub lpfOrder: ma_uint32,
    pub lpfNyquistFactor: f64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ma_data_converter_config__bindgen_ty_1__bindgen_ty_2 {
    pub quality: ::std::os::raw::c_int,
}
extern "C" {
    pub fn ma_data_converter_config_init_default() -> ma_data_converter_config;
}
